--- a/notebooks/33_Accessibility_Dredging_NoTide.ipynb
+++ b/notebooks/33_Accessibility_Dredging_NoTide.ipynb
@@ -304,10 +304,10 @@
     "    {},\n",
     ")\n",
     "\n",
-    "MoveWithDepthActivity = type(\n",
-    "    \"MoveWithDepthActivity\",\n",
+    "MoveWithDredgeActivity = type(\n",
+    "    \"MoveWithDredgeActivity\",\n",
     "    (\n",
-    "        plugin.HasDepthPluginActivity,\n",
+    "        plugin.HasDredgePluginActivity,\n",
     "        model.MoveActivity,\n",
     "    ),\n",
     "    {},\n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4b621a99",
    "metadata": {},
    "outputs": [],
@@ -325,14 +325,20 @@
     "amount = 10\n",
     "duration = 200\n",
     "\n",
+    "\n",
+    "dredge_criteria = plugin.DredgeCriterion(\n",
+    "    name=\"dredge_crit\",\n",
+    ")\n",
+    "\n",
     "# Specify dredging subprocesses\n",
     "dredging_subprocesses = [\n",
-    "    model.MoveActivity(\n",
+    "    MoveWithDredgeActivity(\n",
     "        env=my_env,\n",
     "        name=\"sailing empty dredging vessel\",\n",
     "        registry=registry,\n",
     "        mover=vessel01,\n",
     "        destination=berth,\n",
+    "        dredge_criteria=dredge_criteria,\n",
     "    ),\n",
     "    model.ShiftAmountActivity(\n",
     "        env=my_env,\n",
@@ -389,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d272ff48",
    "metadata": {},
    "outputs": [],
@@ -454,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a22e6a3f",
    "metadata": {},
    "outputs": [],
@@ -468,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "67e9ea06",
    "metadata": {},
    "outputs": [
@@ -541,166 +547,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e96e09e8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Activity</th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>ActivityState</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>container level</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sailing empty dredging vessel</td>\n",
-       "      <td>1970-01-01 00:00:00.000000</td>\n",
-       "      <td>START</td>\n",
-       "      <td>POINT (4.1795229742823 52.11590591837503)</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>sailing empty dredging vessel</td>\n",
-       "      <td>1970-01-01 00:32:00.113018</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>loading dredging vessel</td>\n",
-       "      <td>1970-01-01 00:32:00.113018</td>\n",
-       "      <td>START</td>\n",
-       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>loading dredging vessel</td>\n",
-       "      <td>1970-01-01 00:40:20.113018</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>sailing full dredging vessel</td>\n",
-       "      <td>1970-01-01 00:40:20.113018</td>\n",
-       "      <td>START</td>\n",
-       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>loading dredging vessel</td>\n",
-       "      <td>1970-01-01 10:03:01.770622</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>sailing full dredging vessel</td>\n",
-       "      <td>1970-01-01 10:03:01.770622</td>\n",
-       "      <td>START</td>\n",
-       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>sailing full dredging vessel</td>\n",
-       "      <td>1970-01-01 10:32:07.327912</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>POINT (4.1795229742823 52.11590591837503)</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>unloading dredging vessel</td>\n",
-       "      <td>1970-01-01 10:32:07.327912</td>\n",
-       "      <td>START</td>\n",
-       "      <td>POINT (4.1795229742823 52.11590591837503)</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>unloading dredging vessel</td>\n",
-       "      <td>1970-01-01 10:35:27.327912</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>POINT (4.1795229742823 52.11590591837503)</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>72 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         Activity                  Timestamp ActivityState  \\\n",
-       "0   sailing empty dredging vessel 1970-01-01 00:00:00.000000         START   \n",
-       "1   sailing empty dredging vessel 1970-01-01 00:32:00.113018          STOP   \n",
-       "2         loading dredging vessel 1970-01-01 00:32:00.113018         START   \n",
-       "3         loading dredging vessel 1970-01-01 00:40:20.113018          STOP   \n",
-       "4    sailing full dredging vessel 1970-01-01 00:40:20.113018         START   \n",
-       "..                            ...                        ...           ...   \n",
-       "67        loading dredging vessel 1970-01-01 10:03:01.770622          STOP   \n",
-       "68   sailing full dredging vessel 1970-01-01 10:03:01.770622         START   \n",
-       "69   sailing full dredging vessel 1970-01-01 10:32:07.327912          STOP   \n",
-       "70      unloading dredging vessel 1970-01-01 10:32:07.327912         START   \n",
-       "71      unloading dredging vessel 1970-01-01 10:35:27.327912          STOP   \n",
-       "\n",
-       "                                       geometry  container level  \n",
-       "0     POINT (4.1795229742823 52.11590591837503)              0.0  \n",
-       "1   POINT (4.062705498083785 51.95909715255291)              0.0  \n",
-       "2   POINT (4.062705498083785 51.95909715255291)              0.0  \n",
-       "3   POINT (4.062705498083785 51.95909715255291)             10.0  \n",
-       "4   POINT (4.062705498083785 51.95909715255291)             10.0  \n",
-       "..                                          ...              ...  \n",
-       "67  POINT (4.062705498083785 51.95909715255291)              5.0  \n",
-       "68  POINT (4.062705498083785 51.95909715255291)              5.0  \n",
-       "69    POINT (4.1795229742823 52.11590591837503)              5.0  \n",
-       "70    POINT (4.1795229742823 52.11590591837503)              5.0  \n",
-       "71    POINT (4.1795229742823 52.11590591837503)              0.0  \n",
-       "\n",
-       "[72 rows x 5 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Inspect dredging vessel log\n",
     "display(plot.get_log_dataframe(vessel01, [activities_dredging_vessel]))"
@@ -708,113 +558,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f920e9e2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Activity</th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>ActivityState</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>container level</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sailing full seagoing vessel</td>\n",
-       "      <td>1970-01-01 00:03:20.000000</td>\n",
-       "      <td>START</td>\n",
-       "      <td>POINT (3.637610458072877 52.10701582514347)</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>sailing full seagoing vessel</td>\n",
-       "      <td>1970-01-01 00:38:13.474629</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>unloading seagoing vessel</td>\n",
-       "      <td>1970-01-01 00:40:20.113018</td>\n",
-       "      <td>START</td>\n",
-       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>unloading seagoing vessel</td>\n",
-       "      <td>1970-01-01 00:45:20.113018</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>sailing empty seagoing vessel</td>\n",
-       "      <td>1970-01-01 00:45:20.113018</td>\n",
-       "      <td>START</td>\n",
-       "      <td>POINT (4.062705498083785 51.95909715255291)</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>sailing empty seagoing vessel</td>\n",
-       "      <td>1970-01-01 01:22:33.152622</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>POINT (3.637610458072877 52.10701582514347)</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        Activity                  Timestamp ActivityState  \\\n",
-       "0   sailing full seagoing vessel 1970-01-01 00:03:20.000000         START   \n",
-       "1   sailing full seagoing vessel 1970-01-01 00:38:13.474629          STOP   \n",
-       "2      unloading seagoing vessel 1970-01-01 00:40:20.113018         START   \n",
-       "3      unloading seagoing vessel 1970-01-01 00:45:20.113018          STOP   \n",
-       "4  sailing empty seagoing vessel 1970-01-01 00:45:20.113018         START   \n",
-       "5  sailing empty seagoing vessel 1970-01-01 01:22:33.152622          STOP   \n",
-       "\n",
-       "                                      geometry  container level  \n",
-       "0  POINT (3.637610458072877 52.10701582514347)                5  \n",
-       "1  POINT (4.062705498083785 51.95909715255291)                5  \n",
-       "2  POINT (4.062705498083785 51.95909715255291)                5  \n",
-       "3  POINT (4.062705498083785 51.95909715255291)                0  \n",
-       "4  POINT (4.062705498083785 51.95909715255291)                0  \n",
-       "5  POINT (3.637610458072877 52.10701582514347)                0  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Inspect seagoing vessel log\n",
     "display(plot.get_log_dataframe(vessel02, [activities_seagoing_vessel]))"
@@ -830,22 +577,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "fba2bcc6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sailing_crit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 8\u001b[0m\n\u001b[0;32m      2\u001b[0m data \u001b[38;5;241m=\u001b[39m res[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      3\u001b[0m layout \u001b[38;5;241m=\u001b[39m res[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlayout\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      5\u001b[0m data\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msailing_crit\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m\"\u001b[39m:[vessel01\u001b[38;5;241m.\u001b[39mlog[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39misoformat(), vessel01\u001b[38;5;241m.\u001b[39mlog[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39misoformat()],\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m:[\u001b[43msailing_crit\u001b[49m\u001b[38;5;241m.\u001b[39mminimum,sailing_crit\u001b[38;5;241m.\u001b[39mminimum],\n\u001b[0;32m      9\u001b[0m })\n\u001b[0;32m     10\u001b[0m data\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msailing_crit\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m\"\u001b[39m:[vessel02\u001b[38;5;241m.\u001b[39mlog[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39misoformat(), vessel02\u001b[38;5;241m.\u001b[39mlog[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39misoformat()],\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m:[sailing_crit\u001b[38;5;241m.\u001b[39mminimum,sailing_crit\u001b[38;5;241m.\u001b[39mminimum],\n\u001b[0;32m     14\u001b[0m })\n\u001b[0;32m     17\u001b[0m data\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDepth\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m\"\u001b[39m:depth_df\u001b[38;5;241m.\u001b[39mindex,\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m:depth_df[sailing_crit\u001b[38;5;241m.\u001b[39mcondition],\n\u001b[0;32m     21\u001b[0m })\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sailing_crit' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res = plot.get_gantt_chart([vessel01, vessel02], y_scale=\"numbers\", static=True, id_map=[activities_dredging_vessel, activities_seagoing_vessel])\n",
     "data = res['data']\n",
@@ -928,9 +663,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
