--- a/notebooks/33_Accessibility_Dredging_NoTide.ipynb
+++ b/notebooks/33_Accessibility_Dredging_NoTide.ipynb
@@ -295,20 +295,11 @@
    "outputs": [],
    "source": [
     "# Define custom activities with Depth Plugin\n",
-    "ShiftAmountWithDepthActivity = type(\n",
-    "    \"ShiftAmountWithDepthActivity\",\n",
-    "    (\n",
-    "        plugin.HasDepthPluginActivity,\n",
-    "        model.ShiftAmountActivity,\n",
-    "    ),\n",
-    "    {},\n",
-    ")\n",
-    "\n",
-    "MoveWithDredgeActivity = type(\n",
-    "    \"MoveWithDredgeActivity\",\n",
+    "WhileWaitingToDredge = type(\n",
+    "    \"WhileWaitingToDredge\",\n",
     "    (\n",
     "        plugin.HasDredgePluginActivity,\n",
-    "        model.MoveActivity,\n",
+    "        model.WhileActivity,\n",
     "    ),\n",
     "    {},\n",
     ")"
@@ -332,13 +323,12 @@
     "\n",
     "# Specify dredging subprocesses\n",
     "dredging_subprocesses = [\n",
-    "    MoveWithDredgeActivity(\n",
+    "    model.MoveActivity(\n",
     "        env=my_env,\n",
     "        name=\"sailing empty dredging vessel\",\n",
     "        registry=registry,\n",
     "        mover=vessel01,\n",
     "        destination=berth,\n",
-    "        dredge_criteria=dredge_criteria,\n",
     "    ),\n",
     "    model.ShiftAmountActivity(\n",
     "        env=my_env,\n",
@@ -370,10 +360,12 @@
     "]\n",
     "\n",
     "# Define activities of the dredging vessel\n",
-    "activities_dredging_vessel = model.WhileActivity(\n",
+    "activities_dredging_vessel = WhileWaitingToDredge(\n",
     "    env=my_env,\n",
     "    name=\"while sequential activity dredging vessel\",\n",
     "    registry=registry,\n",
+    "    dredge_criteria=dredge_criteria,\n",
+    "    destination=berth,\n",
     "    sub_processes=[\n",
     "        model.SequentialActivity(\n",
     "            env=my_env,\n",
@@ -482,6 +474,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "check dredging criteria 0\n",
+      "check if we need to dredge\n",
+      "<__main__.DredgedSite object at 0x000001AF6AFF9B20> -18 -17.5\n",
+      "we are not dredging\n",
       "mover dredging vessel destination berth\n",
       "mover seagoing vessel destination berth\n",
       "updating to destination geometry POINT (4.062705498083785 51.95909715255291)\n",
@@ -528,6 +524,14 @@
    "source": [
     "my_env.run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "653367fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -847,7 +851,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\asepehri\\github\\OpenCLSim\\notebooks\\33_Accessibility_Dredging_NoTide.ipynb Cell 26\u001b[0m line \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m data \u001b[39m=\u001b[39m res[\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m layout \u001b[39m=\u001b[39m res[\u001b[39m'\u001b[39m\u001b[39mlayout\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m data\u001b[39m.\u001b[39mappend({\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39msailing_crit\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mx\u001b[39m\u001b[39m\"\u001b[39m:[vessel01\u001b[39m.\u001b[39mlog[\u001b[39m\"\u001b[39m\u001b[39mTimestamp\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39misoformat(), vessel01\u001b[39m.\u001b[39mlog[\u001b[39m\"\u001b[39m\u001b[39mTimestamp\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39misoformat()],\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m:[sailing_crit\u001b[39m.\u001b[39mminimum,sailing_crit\u001b[39m.\u001b[39mminimum],\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m })\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m data\u001b[39m.\u001b[39mappend({\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39msailing_crit\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mx\u001b[39m\u001b[39m\"\u001b[39m:[vessel02\u001b[39m.\u001b[39mlog[\u001b[39m\"\u001b[39m\u001b[39mTimestamp\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39misoformat(), vessel02\u001b[39m.\u001b[39mlog[\u001b[39m\"\u001b[39m\u001b[39mTimestamp\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39misoformat()],\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m:[sailing_crit\u001b[39m.\u001b[39mminimum,sailing_crit\u001b[39m.\u001b[39mminimum],\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m })\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m data\u001b[39m.\u001b[39mappend({\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mDepth\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mx\u001b[39m\u001b[39m\"\u001b[39m:depth_df\u001b[39m.\u001b[39mindex,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m:depth_df[sailing_crit\u001b[39m.\u001b[39mcondition],\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/asepehri/github/OpenCLSim/notebooks/33_Accessibility_Dredging_NoTide.ipynb#X34sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m })\n",
+      "Cell \u001b[1;32mIn[14], line 8\u001b[0m\n\u001b[0;32m      2\u001b[0m data \u001b[38;5;241m=\u001b[39m res[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      3\u001b[0m layout \u001b[38;5;241m=\u001b[39m res[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlayout\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      5\u001b[0m data\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msailing_crit\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m\"\u001b[39m:[vessel01\u001b[38;5;241m.\u001b[39mlog[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39misoformat(), vessel01\u001b[38;5;241m.\u001b[39mlog[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39misoformat()],\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m:[\u001b[43msailing_crit\u001b[49m\u001b[38;5;241m.\u001b[39mminimum,sailing_crit\u001b[38;5;241m.\u001b[39mminimum],\n\u001b[0;32m      9\u001b[0m })\n\u001b[0;32m     10\u001b[0m data\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msailing_crit\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m\"\u001b[39m:[vessel02\u001b[38;5;241m.\u001b[39mlog[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39misoformat(), vessel02\u001b[38;5;241m.\u001b[39mlog[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39misoformat()],\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m:[sailing_crit\u001b[38;5;241m.\u001b[39mminimum,sailing_crit\u001b[38;5;241m.\u001b[39mminimum],\n\u001b[0;32m     14\u001b[0m })\n\u001b[0;32m     17\u001b[0m data\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDepth\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m\"\u001b[39m:depth_df\u001b[38;5;241m.\u001b[39mindex,\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m:depth_df[sailing_crit\u001b[38;5;241m.\u001b[39mcondition],\n\u001b[0;32m     21\u001b[0m })\n",
       "\u001b[1;31mNameError\u001b[0m: name 'sailing_crit' is not defined"
      ]
     }
@@ -934,9 +938,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
